# renderer

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
src/: display.c  display.h  main.c  mesh.c  mesh.h  triangle.c  vector.c  vector.h
